Add repository-level pagination
