# docs/swagger.yaml
@@ -76,6 +76,21 @@ definitions:
       ViolationDescription:
         type: string
     type: object
+  inspection-service_service_inspection.InspectedDevice:
+    properties:
+      consumption:
+        type: number
+      created_at:
+        type: string
+      device_id:
+        type: integer
+      id:
+        type: integer
+      inspection_id:
+        type: integer
+      value:
+        type: number
+    type: object
   inspection-service_service_inspection.Inspection:
     properties:
       CreatedAt:
@@ -86,6 +101,10 @@ definitions:
         type: integer
       InspectAt:
         type: string
+      InspectedDevices:
+        items:
+          $ref: '#/definitions/inspection-service_service_inspection.InspectedDevice'
+        type: array
       IsExpenseAvailable:
         type: boolean
       IsRestrictionChecked:
@@ -210,6 +229,15 @@ paths:
   /inspections:
     get:
       description: Returns all inspections.
+      parameters:
+      - description: Maximum number of items to return; 0 means no limit
+        in: query
+        name: limit
+        type: integer
+      - description: Number of items to skip
+        in: query
+        name: offset
+        type: integer
       produces:
       - application/json
       responses:
@@ -219,6 +247,10 @@ paths:
             items:
               $ref: '#/definitions/inspection-service_service_inspection.Inspection'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gorouter.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
